# blueprint

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Tiltfile  airflow_stub.py  pydantic_stub.py  pyproject.toml  test_comprehensive.py  test_template_generation.py  tmp.py
.github/workflows/: ci.yml  claude-code-review.yml  claude-issue-review.yml  claude.yml  lint-reusable.yml  release.yml  test-matrix.yml  test-reusable.yml
blueprint/: __init__.py  cli.py  config.py  core.py  dag_writer.py  errors.py  linter.py  linting.py  loaders.py  models.py  registry.py  template_loader.py  utils.py
blueprint/templates/: blueprint.toml.template  dag_loader.py.template  example_etl.py.template
docs/: CONTRIBUTING.md  api_design_options.md  implementation_plan.md  python_compatibility.md  workflows.md  write_dag_file.md
examples/: Dockerfile  README.md  build_time_example.py  docker-compose.yaml  python_api_example.py  requirements.txt
examples/.astro/templates/: daily_etl.py  multi_source_etl.py
examples/.astro/templates/j2/: daily_etl.j2  multi_source_etl.j2
examples/dags/: yaml_loader.py
examples/dags/blueprint/params/: customer_etl.dag.yaml  sales_analytics.dag.yaml
examples/dags/blueprint/templates/: daily_etl.py.j2
examples/dags/templates/: daily_etl.py.j2  multi_source_etl.py.j2
src/blueprint/: __init__.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_dag_writer.py  test_errors.py  test_linter.py  test_linting.py  test_loaders.py  test_registry.py  test_template_loader.py  test_write_dag_file.py
