[project]
name = "astronomer-blueprint"
version = "0.1.0"
description = "Create reusable Airflow DAG templates with validated configurations"
readme = "README.md"
authors = [
    { name = "Julian LaNeve", email = "lanevejulian@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "apache-airflow>=2.5.0",
    "typing-extensions>=4.0.0; python_version<'3.9'",
    "click>=8.0.0",
]

[project.scripts]
blueprint = "blueprint.cli:main"

[project.urls]
"Homepage" = "https://github.com/astronomer/blueprint"
"Repository" = "https://github.com/astronomer/blueprint"
"Documentation" = "https://docs.astronomer.io/blueprint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
